--- a/src/Menu/custom-font-styles.css
+++ b/src/Menu/custom-font-styles.css
@@ -29,3 +29,8 @@
     -fx-text-fill: white;
     -fx-underline: true;
 }
+
+.optionsLabel{
+    -fx-background-color: rgba(0, 100, 100, 0.5);;
+    -fx-background-radius: 10pt;
+}
