--- a/src/Menu/custom-font-styles.css
+++ b/src/Menu/custom-font-styles.css
@@ -21,7 +21,7 @@
     -fx-padding: 10 30 10 30;
 }
 
-.settings{
+.settings {
     -fx-font-family: 'Arial';
     -fx-effect: dropshadow(gaussian, black, 0, 0, 0, 2);
     -fx-font-weight: bold;
@@ -30,7 +30,14 @@
     -fx-underline: true;
 }
 
-.optionsLabel{
+.optionsLabel {
     -fx-background-color: rgba(0, 100, 100, 0.5);;
     -fx-background-radius: 10pt;
+}
+
+.startmenuBox {
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center;
+    -fx-border-width: 2;
+    -fx-border-color: black;
 }
