--- a/src/Menu/custom-font-styles.css
+++ b/src/Menu/custom-font-styles.css
@@ -35,7 +35,7 @@
     -fx-background-radius: 10pt;
 }
 
-.startmenuBox {
+.startMenuBox {
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
     -fx-border-width: 2;
