--- a/src/Game/custom-game-styles.css
+++ b/src/Game/custom-game-styles.css
@@ -14,3 +14,17 @@
 .leftbutton{
     -fx-background-radius: 10;
 }
+
+.button {
+    -fx-background-size: cover, auto;
+    -fx-background-radius: 8em;
+    -fx-min-width: 50px;
+    -fx-min-height: 50px;
+    -fx-background-color: linear-gradient(#61A2B1, #2A5058);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.6), 5, 0.0, 0, 1);
+}
+
+.button:hover {
+    -fx-background-color: #81E6DD;
+
+}
