--- a/src/Menu/custom-font-styles.css
+++ b/src/Menu/custom-font-styles.css
@@ -25,7 +25,7 @@
 }
 
 .background {
-    -fx-background-image: url('/Menu/Images/Old/menuBG.jpg');
+    -fx-background-image: url('/Menu/Images/menuBG.jpg');
     -fx-background-size: cover, auto;
     -fx-padding: 10 30 10 30;
 }
