--- a/src/Menu/custom-font-styles.css
+++ b/src/Menu/custom-font-styles.css
@@ -51,7 +51,7 @@
     -fx-border-width: 2;
     -fx-border-color: black;
     -fx-background-radius: 10;
-    -fx-background-color: cadetblue;
+    -fx-background-color: #c5c837;
 }
 
 .p2MenuBox {
