--- a/src/Game/custom-game-styles.css
+++ b/src/Game/custom-game-styles.css
@@ -4,14 +4,14 @@
     -fx-padding: 10;
 }
 
-.playerID{
+.playerID {
     -fx-font-family: 'Arial';
     -fx-effect: dropshadow(gaussian, black, 0, 0, 0, 2);
     -fx-font-weight: bold;
     -fx-font-size: 18;
 }
 
-.leftbutton{
+.leftbutton {
     -fx-background-radius: 10;
 }
 
@@ -27,4 +27,9 @@
 .button:hover {
     -fx-background-color: #81E6DD;
 
+}
+
+.tool-bar:horizontal {
+    -fx-background-color: linear-gradient(#beb2a6, #423c37);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.6), 5, 0.0, 0, 1);
 }
