--- a/src/Menu/custom-font-styles.css
+++ b/src/Menu/custom-font-styles.css
@@ -75,15 +75,21 @@
 }
 
 .p1MenuBox:hover {
-    -fx-background-color:#81E6DD;
+    -fx-background-color: #81E6DD;
 }
 
 .p2MenuBox:hover {
-    -fx-background-color:#81E6DD;
+    -fx-background-color: #81E6DD;
 }
 
 .pcMenuBox:hover {
-    -fx-background-color:#81E6DD;
+    -fx-background-color: #81E6DD;
 }
 
+.helpbox {
+    -fx-background-color: cadetblue;
+    -fx-border-width: 2;
+    -fx-border-color: black;
+    -fx-background-radius: 20;
+}
 
